# users

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2024_08_22_2116-db0e30e2d395_users_table.py
src/: database.py  settings.py
src/users/: __init__.py  auth.py  depends.py  models.py  router.py  schemas.py  utils.py
