[tool.poetry]
name = "users"
version = "0.0.1"
description = ""
authors = ["sultan <sultankurbanov404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
pydantic-settings = "^2.4.0"
aiosqlite = "^0.20.0"
bcrypt = "^4.2.0"
black = "^24.8.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
python-multipart = "^0.0.9"
gunicorn = "^23.0.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
